--- a/index.html
+++ b/index.html
@@ -76,3 +76,9 @@
     </footer>
 </body>
 </html>
+<h2>Contact Us</h2>
+<div class="contact">
+  <p><strong>Phone:</strong> <a href="tel:+919876543210">+91 98765 43210</a></p>
+  <p><strong>WhatsApp:</strong> <a href="https://wa.me/919876543210">Chat on WhatsApp</a></p>
+  <p><strong>Email:</strong> <a href="mailto:krishnakidswear@gmail.com">krishnakidswear@gmail.com</a></p>
+</div>
